Stop using deprecated new Locale
Use Locale.of instead.